# SceneManagement

./: .gitignore  README.md  caribu_tuto.ipynb  convert.py  leaf.gltf  pyproject.toml  tuto.py
models/: box.gltf  large_tree.gltf  leaf.geom  tree.geom
models/environments/: chamber.glb  chamber.gltf
models/materials/environment/chamber/reflectances/: MurBlanc.csv
models/materials/plants/rose/reflectances/: old_leaf_inf.csv  old_leaf_sup.csv
models/materials/plants/rose/transmittances/: old_leaf_inf.csv  old_leaf_sup.csv
models/plants/: plant3.gltf
src/openalea/scenemanagement/: __init__.py  _version.py  convert.py  model.py  project.py  scene.py
tutorials/: caribu_tuto.ipynb  scene.json  scene_tuto.ipynb  soil.gltf
